Refactor plugin dependencies and introduce feature flags